# libcxxdes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  actions_config.sh  cxx-des-1.cpp  final_goal.cpp
.github/workflows/: cmake.yml
docs/: awaitables.md  coroutine_model.md  debug_macros.md  index.md  sync_primitives.md
examples/: allocator.cpp  aloha.cpp  any_of.cpp  await_transform_extender.cpp  barebones_awaitable.cpp  basic_arch_sim.cpp  bug.cpp  capture_return.cpp  clocks.cpp  complicated.cpp  compositions_lvalueref.cpp  debug.cpp  event.cpp  exceptions.cpp  fences.cpp  get_env.cpp  get_environment.cpp  interrupt_test.cpp  lazy_timeout.cpp  mutex.cpp  ping_pong.cpp  pitfall.cpp  process_rewrite.cpp  producer_consumer.cpp  queue.cpp  raii_trick.cpp  random_variable.hpp  resource.cpp  return_value.cpp  return_value_and_timeout.cpp  rewrite.cpp  semaphore.cpp  stack.cpp  start_awaitable.cpp  subroutine.cpp  symmetric.cpp  test.cpp  this_out_scope.cpp  time.cpp
include/cxx_des/: any_all_of.hpp  any_of.hpp  awaitables.hpp  compositions.hpp  coroutine.hpp  cxx_des.hpp  environment.hpp  event.hpp  event_fence.hpp  mutex.hpp  process.hpp  simulation.hpp  timeout.hpp
include/cxxdes/: cxxdes.hpp  time.hpp  utils.hpp
include/cxxdes/core/: awaitable.hpp  compositions.hpp  core.hpp  coroutine.hpp  debug_helpers.hpp  defs.hpp  environment.hpp  event.hpp  process.hpp  simulation.hpp  timeout.hpp  token.hpp
include/cxxdes/core/impl/: any_of.ipp  async.ipp  await_transform.ipp  awaitable.ipp  co_with.ipp  compositions.ipp  coroutine.ipp  coroutine_data.ipp  coroutine_info.ipp  defs.ipp  environment.ipp  exception_container.ipp  exception_types.ipp  immediately_return.ipp  sequential.ipp  subroutine.ipp  timeout.ipp  token.ipp  under_coroutine.ipp
include/cxxdes/debug/: begin.hpp  end.hpp  helpers.hpp
include/cxxdes/misc/: allocators.hpp  reference_counted.hpp  time.hpp  utils.hpp
include/cxxdes/queue/: queue.hpp
include/cxxdes/sync/: event.hpp  event_fence.hpp  mutex.hpp  queue.hpp  resource.hpp  semaphore.hpp
scripts/: run_tests.md  run_tests.sh
scripts/test_configs/: appleclang-debug.cfg  appleclang-release.cfg  clang-14-debug.cfg  clang-14-release.cfg  clang-14.sh  clang.sh  gnu-11-debug.cfg  gnu-11-release.cfg  gnu-11.sh  gnu-12-debug.cfg  gnu-12-release.cfg  gnu-12.sh
src/: event.cpp
tests/: controlflow.test.cpp  helloworld.test.cpp  process.test.cpp  time.test.cpp
